Added comment controller to manage requests
