# app/Http/Controllers/CommentController.php
@@ -3,27 +3,23 @@
 namespace App\Http\Controllers;
 
 use App\Http\Controllers\Controller;
-use App\Http\Requests\StorePostRequest;
-use App\Http\Requests\UpdatePostRequest;
-use App\Http\Resources\PostResource;
-use App\Http\Resources\PostResourceFull;
 use App\Http\Responses\ApiResponse;
-use App\Models\Post;
+use App\Models\Comment;
 use Exception;
 use Illuminate\Database\Eloquent\ModelNotFoundException;
 use Illuminate\Http\Request;
 use Illuminate\Validation\ValidationException;
 
-class PostController extends Controller
+class CommentController extends Controller
 {
     /**
-     * Show all posts
+     * Show all comments
      * @OA\Get (
-     *     path="/api/posts",
-     *     tags={"Post"},
+     *     path="/api/comments",
+     *     tags={"Comment"},
      *     security={{"token": {}}},
-     *     summary="Get list of posts",
-     *     description="Return list of posts",
+     *     summary="Get list of comments",
+     *     description="Return list of comments",
      *     @OA\Response(
      *          response=200,
      *          description="Successful operation",
@@ -52,19 +48,19 @@ class PostController extends Controller
     public function index()
     {
         try {
-            $posts = Post::all();
-            
-            return ApiResponse::success('Success', 200, PostResource::collection($posts));
+            $comments = Comment::all();
+
+            return ApiResponse::success('Success', 200, $comments);
         } catch (Exception $e) {
-            return ApiResponse::error('An error ocurred while trying to get the posts: ' . $e->getMessage(), 500);
+            return ApiResponse::error('An error ocurred while trying to get the comments: ' . $e->getMessage(), 500);
         }
     }
 
     /**
-     * Create a new post
+     * Create a new comment
      * @OA\Post (
-     *     path="/api/posts",
-     *     tags={"Post"},
+     *     path="/api/comments",
+     *     tags={"Comment"},
      *     security={{"token": {}}},
      *     @OA\RequestBody(
      *         @OA\MediaType(
@@ -73,17 +69,22 @@ class PostController extends Controller
      *                 @OA\Property(
      *                      type="object",
      *                      @OA\Property(
-     *                          property="title",
-     *                          type="string"
+     *                          property="user_id",
+     *                          type="number"
      *                      ),
      *                      @OA\Property(
-     *                          property="content",
+     *                          property="post_id",
+     *                          type="number"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="comment",
      *                          type="string"
      *                      ),
      *                 ),
      *                 example={
-     *                     "title":"This is the new post",
-     *                     "content":"This is the content of the new post"
+     *                     "user_id":"1",
+     *                     "post_id":"1",
+     *                     "comment":"This is the new comment"
      *                }
      *             )
      *         )
@@ -93,32 +94,31 @@ class PostController extends Controller
      *          description="CREATED",
      *          @OA\JsonContent(
      *              @OA\Property(property="id", type="number", example=1),
-     *              @OA\Property(property="title", type="string", example="This is the new post"),
-     *              @OA\Property(property="content", type="string", example="This is the content of the new post"),
+     *              @OA\Property(property="user_id", type="number", example="1"),
+     *              @OA\Property(property="post_id", type="number", example="1"),
+     *              @OA\Property(property="comment", type="string", example="This is the new comment"),
      *              @OA\Property(property="created_at", type="string", example="2023-02-23T00:09:16.000000Z"),
      *              @OA\Property(property="updated_at", type="string", example="2023-02-23T12:33:45.000000Z")
      *          )
      *      )
      * )
      */
-    public function store(StorePostRequest $request)
+    public function store(Request $request)
     {
         try {
-            $post = Post::create(array_merge($request->all(), [
-                'user_id' => auth()->user()->id
-            ]));
-
-            return ApiResponse::success('The post has been successfully created', 200, $post);
+            $comment = Comment::create($request->all());
+            
+            return ApiResponse::success('The comment has been successfully created', 200, $comment);
         } catch (ValidationException $e) {
             return ApiResponse::error('Validation errors: ' . $e->getMessage(), 422);
         }
     }
 
     /**
-     * Show post information
+     * Show comment information
      * @OA\Get (
-     *     path="/api/posts/{id}",
-     *     tags={"Post"},
+     *     path="/api/comments/{id}",
+     *     tags={"Comment"},
      *     security={{"token": {}}},
      *     @OA\Parameter(
      *         in="path",
@@ -135,19 +135,19 @@ class PostController extends Controller
     public function show($id)
     {
         try {
-            $post = Post::with(['user', 'comments'])->findOrFail($id);;
+            $comment = Comment::findOrFail($id);
 
-            return ApiResponse::success('Success', 200, new PostResourceFull($post));
+            return ApiResponse::success('Success', 200, $comment);
         } catch (ModelNotFoundException $e) {
-            return ApiResponse::error('An error ocurred while trying to get the user: ' .  $e->getMessage(), 404);
-        } 
+            return ApiResponse::error('An error ocurred while trying to get the comment: ' . $e->getMessage(), 404);
+        }
     }
 
     /**
-     * Update post information
+     * Update comment information
      * @OA\Patch (
-     *     path="/api/posts/{id}",
-     *     tags={"Post"},
+     *     path="/api/comments/{id}",
+     *     tags={"Comment"},
      *     security={{"token": {}}},
      *     @OA\Parameter(
      *         in="path",
@@ -162,17 +162,22 @@ class PostController extends Controller
      *                 @OA\Property(
      *                      type="object",
      *                      @OA\Property(
-     *                          property="title",
-     *                          type="string"
+     *                          property="user_id",
+     *                          type="number"
      *                      ),
      *                      @OA\Property(
-     *                          property="content",
+     *                          property="post_id",
+     *                          type="number"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="comment",
      *                          type="string"
      *                      ),
      *                 ),
      *                 example={
-     *                     "title":"This is the new post",
-     *                     "content":"This is the content of the new post"
+     *                     "user_id":"1",
+     *                     "post_id":"1",
+     *                     "comment":"This is the new comment"
      *                }
      *             )
      *         )
@@ -182,33 +187,34 @@ class PostController extends Controller
      *          description="CREATED",
      *          @OA\JsonContent(
      *              @OA\Property(property="id", type="number", example=1),
-     *              @OA\Property(property="title", type="string", example="This is the new post"),
-     *              @OA\Property(property="content", type="string", example="This is the content of the new post"),
+     *              @OA\Property(property="user_id", type="number", example="1"),
+     *              @OA\Property(property="post_id", type="number", example="1"),
+     *              @OA\Property(property="comment", type="string", example="This is the new comment"),
      *              @OA\Property(property="created_at", type="string", example="2023-02-23T00:09:16.000000Z"),
      *              @OA\Property(property="updated_at", type="string", example="2023-02-23T12:33:45.000000Z")
      *          )
      *      )
      * )
      */
-    public function update(UpdatePostRequest $request, $id)
+    public function update(Request $request, $id)
     {
         try {
-            $post = Post::findOrFail($id);
-            $post->update($request->all());
+            $comment = Comment::findOrFail($id);
+            $comment->update($request->all());
 
-            return ApiResponse::success('The post has been successfully updated', 200, new PostResource($post));
+            return ApiResponse::success('The comment has been successfully updated', 200, $comment);
         } catch (ModelNotFoundException $e) {
-            return ApiResponse::error('An error ocurred while trying to get the user: ' .  $e->getMessage(), 404);
+            return ApiResponse::error('An error ocurred while trying to get the commen: ' . $e->getMessage(), 404);
         } catch (ValidationException $e) {
-            return ApiResponse::error('Validation errors: ' . $e->getMessage(), 422);
+            return ApiResponse::error('Validation errors: ' . $e->getMessage(), 404);
         }
     }
 
     /**
-     * Delete post information
+     * Delete comment information
      * @OA\Delete (
-     *     path="/api/posts/{id}",
-     *     tags={"Post"},
+     *     path="/api/comments/{id}",
+     *     tags={"Comment"},
      *     security={{"token": {}}},
      *     @OA\Parameter(
      *         in="path",
@@ -225,12 +231,12 @@ class PostController extends Controller
     public function destroy($id)
     {
         try {
-            $post = Post::findOrFail($id);
-            $post->delete();
+            $comment = Comment::findOrFail($id);
+            $comment->delete();
 
-            return ApiResponse::success('The post has been successfully deleted', 200);
+            return ApiResponse::success('The comment has been successfully deleted', 200);
         } catch (ModelNotFoundException $e) {
-            return ApiResponse::error('An error ocurred while trying to get the user: ' .  $e->getMessage(), 404);
+            return ApiResponse::error('An error ocurred while trying to get the comment: ' . $e->getMessage(), 404);
         }
     }
 }
