# app/Models/Comment.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+
+class Comment extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'comment',
+        'post_id',
+        'user_id'
+    ];
+
+    public function post(): BelongsTo 
+    {
+        return $this->belongsTo(Post::class);
+    }
+
+    public function user(): BelongsTo 
+    {
+        return $this->belongsTo(User::class);
+    }
+}
